# rust-api

./: .env  Cargo.toml
.sqlx/: query-73f1dbc198b602fc99514da5dda45658c65bad0fdd3f73b53a24543d0495a763.json
src/: main.rs
src/data/: store.json
src/helpers/: errors.rs  hash.rs  mod.rs  regex.rs
src/users/: controller.rs  model.rs  repository.rs  service.rs
