[package]
name = "user-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
chrono = {version = "0.4.41", features = ["serde"]}
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
password-hash = "0.5.0"
rand_core = "0.9.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = {version = "0.8.6",  features = ["runtime-tokio-rustls", "postgres", "uuid", "macros"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] } 
